package com.fooddelivery.strategies.relatorio;

public interface RelatorioStrategy {

    String gerarRelatorio();
}